positioned cta box

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     </header>
 
     <!-- hero/jumbotron -->
-    <section>
-        <div>
+    <section class="hero">
+        <div class="hero-form">
             <h3>Get Started Today</h3>
-            <p>Fill out this form and one of our trainers will schedule a consult</p>
+            <p>Fill out this form and one of our trainers will schedule a consult.</p>
         <!-- Add form element -->
         <form>
             <label for="email">Enter full name:</label>
@@ -55,7 +55,7 @@
             </p>
             <p>
                 <label for="checkbox" >
-                  I acknowledge that I am at least 18 years of age.
+                    I acknowledge that I am at least 18 years of age.
                 </label>
                 <input type="checkbox" name="age-confirm" id="checkbox" />
             </p>
