--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         <!-- Add form element -->
         <form>
             <label for="email">Enter full name:</label>
-            <input type="text" placeholder="Your Name" name="name" id="name"/>
+            <input type="text" placeholder="Your Name" name="name" id="name" class="form-input"/>
             <label for="email">Enter email address:</label>
-            <input type="email" placeholder="Email Address" name="email" id="email"/>
+            <input type="email" placeholder="Email Address" name="email" id="email" class="form-input"/>
             <label for="phone">Enter a telephone number:</label>
-            <input type="tel" placeholder="Phone Number" name="phone" id="phone"/>
+            <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input"/>
             <p>
                 Have you worked out with a trainer before?
                 <input type="radio" name="trainer-confirm" id="trainer-yes" />
