--- a/index.html
+++ b/index.html
@@ -67,19 +67,44 @@
     </section>
     <!-- end hero -->
     <!-- "what we do" section -->
-    <section>
+    <section id="what-we-do">
         <h2>What We Do</h2>
+        <p>butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft</p>
     </section>
 
     <!-- "what you do" section -->
-    <section>
+    <section id="what-you-do"> 
         <h2>What You Do</h2>
+        <div>
+            <!-- insert this img element -->
+            <img src="./assets/images/step-1.svg" alt=""/>
+            <h3>Step 1: Fill out the Form Above.</h3>
+            <p>You're already here, so why not?</p>
+        </div>
+
+        <div>
+            <img src="./assets/images/step-2.svg" alt="" />
+            <h3>Step 2: Consult with One of Our Trainers.</h3>
+            <p>Are you here to build muscle, lose weight, or just feel good?</p>
+        </div>
+
+        <div>
+            <img src="./assets/images/step-3.svg" alt="" />
+            <h3>Step 3: Get Running.</h3>
+            <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+        </div>
+
+        <div>
+            <img src="./assets/images/step-4.svg" alt="" />
+            <h3>Step 4: See Results.</h3>
+            <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+        </div>
     </section>
 
     <!-- "meet the trainers" section -->
-    <sectino>
+    <section>
         <h2>Meet The Trainers</h2>
-    </sectino>
+    </section>
 
     <!-- "reach out" section -->
     <section>
