style what we do section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </section>
     <!-- end hero -->
     <!-- "what we do" section -->
-    <section id="what-we-do">
+    <section id="what-we-do" class="intro">
         <h2>What We Do</h2>
         <p>butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft</p>
     </section>
