--- a/index.html
+++ b/index.html
@@ -146,6 +146,29 @@
     <!-- "reach out" section -->
     <section>
         <h2>Reach Out</h2>
+        <div class="contact-info">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2630.026492703982!2d-122.42598484898063!3d48.762290379176555!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5485a46d0044fd4b%3A0xc26cf541255d112f!2s3700%20Alabama%20St%2C%20Bellingham%2C%20WA%2098229!5e0!3m2!1sen!2sus!4v1619224071353!5m2!1sen!2sus" 
+            width="400" 
+            height="400" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy">
+            </iframe>
+        </div>
+        <div>
+            <h3>Run Buddy</h3>
+            <p>Any questions or concerns before signing up?
+                <br />
+                Let us know and we'll be happy to talk to you!
+            </p>
+            <address>
+                55 Main Street <br />
+                Some Town, Ca <br />
+                1234 <br />
+                P: 555.RUN.BUDZ (555.786.2839)<br/>
+                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+            </address>
+        </div>
     </section>
 
     <!-- footer -->
