started privacy statement

--- a/index.html
+++ b/index.html
@@ -144,20 +144,18 @@
     </section>
 
     <!-- "reach out" section -->
-    <section>
-        <h2>Reach Out</h2>
+    <section id="reach-out" class="contact">
+        <h2 class="section-title secondary-border">Reach Out</h2>
         <div class="contact-info">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2630.026492703982!2d-122.42598484898063!3d48.762290379176555!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5485a46d0044fd4b%3A0xc26cf541255d112f!2s3700%20Alabama%20St%2C%20Bellingham%2C%20WA%2098229!5e0!3m2!1sen!2sus!4v1619224071353!5m2!1sen!2sus" 
-            width="400" 
-            height="400" 
             style="border:0;" 
             allowfullscreen="" 
             loading="lazy">
             </iframe>
-        </div>
         <div>
             <h3>Run Buddy</h3>
-            <p>Any questions or concerns before signing up?
+            <p>
+                Any questions or concerns before signing up?
                 <br />
                 Let us know and we'll be happy to talk to you!
             </p>
@@ -169,13 +167,14 @@
                 E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
             </address>
         </div>
+        </div>
     </section>
 
     <!-- footer -->
     <footer>
         <h2>❤️  Made with love by Run Buddy</h2>
         <div>
-            <a href="#">Read Our Privacy Policy</a><br />
+            <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
             &copy; 2019 Run Buddy, Inc.
         </div>
     </footer>
