--- a/index.html
+++ b/index.html
@@ -75,13 +75,21 @@
     <!-- end hero -->
     <!-- "what we do" section -->
     <section id="what-we-do" class="intro">
-        <h2 class="section-title primary-border">What We Do</h2>
+        <!-- Wrap every h2 with a class of "section-title" in this div! -->
+        <div class="flex-row">
+            <h2 class="section-title primary-border"> What We Do</h2>
+        </div>
+        <div class="flex-row">
         <p>butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft</p>
+        </div>
     </section>
 
     <!-- "what you do" section -->
     <section id="what-you-do" class="steps"> 
-        <h2 class="section-title secondary-border">What You Do</h2>
+        <!-- Wrap every h2 with a class of "section-title" in this div! -->
+        <div class="flex-row">
+            <h2 class="section-title secondary-border">What You Do</h2>
+        </div>
         <div>
             <!-- insert this img element -->
             <img src="./assets/images/step-1.svg" alt=""/>
@@ -110,9 +118,9 @@
 
     <!-- "meet the trainers" section -->
     <section id="your-trainers" class="trainers">
-        <h2 class="section-title primary-border">
-            Meet The Trainers
-        </h2>
+        <div class="flex-row">
+            <h2 class="section-title primary-border">Meet The Trainers</h2>
+        </div>
         <article class="trainer">
             <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout cloths ready to pump iron" />
             <div class="trainer-bio text-left">
@@ -152,7 +160,9 @@
 
     <!-- "reach out" section -->
     <section id="reach-out" class="contact">
-        <h2 class="section-title secondary-border">Reach Out</h2>
+        <div class="flex-row">
+            <h2 class="section-title secondary-border">Reach Out</h2>
+        </div>
         <div class="contact-info">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2630.026492703982!2d-122.42598484898063!3d48.762290379176555!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5485a46d0044fd4b%3A0xc26cf541255d112f!2s3700%20Alabama%20St%2C%20Bellingham%2C%20WA%2098229!5e0!3m2!1sen!2sus!4v1619224071353!5m2!1sen!2sus" 
             style="border:0;" 
