--- a/index.html
+++ b/index.html
@@ -90,29 +90,60 @@
         <div class="flex-row">
             <h2 class="section-title secondary-border">What You Do</h2>
         </div>
-        <div>
-            <!-- insert this img element -->
-            <img src="./assets/images/step-1.svg" alt=""/>
-            <h3>Step 1: <span>Fill out the Form Above.</span></h3>
-            <p>You're already here, so why not?</p>
+        <div class="step">
+            <h3>Step1.</h3>
+            <div class="step-info">
+                <div class="step-img">
+                    <img src="./assets/images/step-1.svg" alt=""/>
+                </div>
+                <div class="step-text">
+                    <h4>Fill Out The FOrm Above</h4>
+                    <p>You're already here, so why not?</p>
+                </div>
+            </div>
         </div>
 
         <div>
-            <img src="./assets/images/step-2.svg" alt="" />
-            <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
-            <p>Are you here to build muscle, lose weight, or just feel good?</p>
+        <div class="step">
+            <h3>Step 2.</h3>
+            <div class="step-info">
+                <div class="step-img">
+                    <img src="./assets/images/step-2.svg" alt="" />
+                </div>
+                <div class="step-text">
+                    <h4>Consult with One of Out Trainers</h4>
+                    <p>Are you here to build muscle, lose weight, or just feel good?</p>
+                </div>
+            </div>
         </div>
 
         <div>
-            <img src="./assets/images/step-3.svg" alt="" />
-            <h3>Step 3: <span>Get Running.</span></h3>
-            <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+        <div class="step">
+            <h3>Step 3.</h3>
+            <div class="step-info">
+                <div class="step-img">
+                    <img src="./assets/images/step-3.svg" alt="" />
+                </div>
+                <div class="step-text">
+                    <h4>Get Running.</h4>
+                    <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+                </div>
+            </div>
         </div>
 
         <div>
-            <img src="./assets/images/step-4.svg" alt="" />
-            <h3>Step 4: <span>See Results.</span></h3>
-            <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+        <div class="step">
+            <h3>Step 4.</h3>
+            <div class="step-info">
+                <div class="step-img">
+                    <img src="./assets/images/step-4.svg" alt="" />
+                </div>
+                <div class="step-text">
+                    <h4>See Results.</h4>
+                    <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+                </div>
+            </div>
+        </div>
         </div>
     </section>
 
